@@ -1,3 +1,8 @@
+2011-05-28  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (show-all-children): Rectangular
+	optimization to display only needed children.
+
 2011-05-17  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-util.lisp (copy-focus-window, cut-focus-window): New
